[package]
name = "fuckbilinovel-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
async-trait = "0.1.81"
fake_user_agent = "0.2.1"
lazy_static = "1.5.0"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["native-tls", "gzip", "brotli", "zstd", "deflate"] }
retry = "2.0.0"
scraper = "0.19.0"
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"

[features]
proxy = []